# RecStore

./: .cursorignore  .gitignore  .gitmodules  404.html  AGENTS.md  CMakeLists.txt  README.md  index.html  mkdocs.yml  recstore_config.json  recstore_config_generator.py  recstore_config_path.py  requirements.txt  run.sh  run1.sh  run2.sh  sitemap.xml
src/: CMakeLists.txt
src/base/: CMakeLists.txt  base.h  common.h  config.h  counter.cc  init.h  log.h  mmap.h  pprint.cc  queue.h  random.h  string.h  test_pq.cc  thread.h
src/base/report/: report_client.cpp
src/benchmark/: CMakeLists.txt  backend_benchmark.cc  benchmark_client.cc  benchmark_client_common.h  dataset_renumbering.cc  dataset_wordcount.cc  parse_dataset.h  perf_sgl.cc  ps_transport_benchmark.cc  ps_transport_benchmark_config.h  recstore_mixed_benchmark.cc
src/executable/uvm/: CMakeLists.txt  uvm_libtorch.cc
src/framework/: CMakeLists.txt  op.cc  op.h  op_local_shm.cc
src/framework/common/: hierkv_local_runtime.cc  hierkv_local_runtime.h  local_shm_op_component.cc  local_shm_op_component.h  op_mock.cc  op_runtime_support.cc  op_runtime_support.h  ps_client_config_adapter.cc  ps_client_config_adapter.h  recstore.cc
src/framework/frugal/: CMakeLists.txt  IPCTensor.cc  IPCTensor.h  IPC_barrier.h  grad_async_v1.h  grad_async_v2 copy.h  grad_async_v2.h  grad_base.h  grad_memory_manager.h  kg_controller.h  kg_controller_test.cc  parallel_pq.h  parallel_pq_v2.h  recstore_pytorch.cc  torch_utils.cc
src/framework/gpu/: CMakeLists.txt  gpu_embedding_cache.cu  gpu_embedding_cache.h
src/framework/hugectr/: hierkv_backend.cc  hierkv_backend.h  op_hugectr.cc  op_hugectr.h
src/framework/pytorch/: CMakeLists.txt  op_torch.cc
src/framework/tensorflow/: CMakeLists.txt
src/gpu_memory/: CMakeLists.txt  mapping_device_memory.cuh  memory_pool.cu.cc  memory_pool.h
src/memory/: CMakeLists.txt  malloc.h  memory_factory.h  pm_command.cc  shm_file.cc  shm_file.h
src/memory/allocators/: allocator_factory.h  benchmark_malloc.cc  concurrent_slab_memory_pool.h  persist_loop_slab_allocator.cc  persist_loop_slab_allocator.h  r2_slab_allocator.h
src/optimizer/: CMakeLists.txt  optimizer.cpp  optimizer.h  sparse_tensor.cpp  sparse_tensor.h
src/ps/: CMakeLists.txt  client_factory.cc  client_factory.h  client_options.h  ps_server.cpp
src/ps/base/: Postoffice.cc  Postoffice.h  cache_ps_impl.h  config.h
src/ps/brpc/: CMakeLists.txt  brpc_ps_client.cpp  brpc_ps_client.h  brpc_ps_client_test.cpp  brpc_ps_server.cpp  brpc_ps_server.h  dist_brpc_ps_client.h  dist_brpc_ps_client_test.cpp
src/ps/grpc/: CMakeLists.txt  dist_grpc_ps_client.cpp  dist_grpc_ps_client.h  dist_grpc_ps_client_test.cpp  grpc_ps_client.cpp  grpc_ps_client.h  grpc_ps_client_test.cpp  grpc_ps_server.cpp  ps_server.md
src/ps/local_shm/: CMakeLists.txt  local_shm_client.cpp  local_shm_client.h  local_shm_futex.cpp  local_shm_futex.h  local_shm_layout.h  local_shm_protocol.h  local_shm_queue.cpp  local_shm_queue.h  local_shm_region.cpp  local_shm_region.h  local_shm_server.cpp  local_shm_server.h  local_shm_server_main.cpp  local_shm_stage_report.h
src/ps/rdma/: CMakeLists.txt  allshards_ps_client.cc  allshards_ps_client.h  petps_client.cc  petps_client.h  petps_magic.h  petps_server.cc  raw_verbs_transport.cc  raw_verbs_transport.h  rdma_protocol.h  rdma_ps_client_adapter.cc  rdma_ps_client_adapter.h  rdma_status.h  rdma_transport_mode.h
src/storage/: CMakeLists.txt
src/storage/gpu_cache/: gpu_cache_api.hpp  nv_gpu_cache.cu  nv_gpu_cache.hpp
src/storage/index/: CMakeLists.txt  index.h
src/storage/io_backend/: io_backend.h
src/storage/kv_engine/: CMakeLists.txt  base_kv.h  benchmark_kv_engine.cc  benchmark_zipf.cc  engine_cceh.h  engine_composite.h  engine_extendible_hash.h  engine_factory.h  engine_petkv.h  engine_selector.h  hps_backend_benchmark.cc  hps_backend_shim.cc  hps_recstore_backend.h  kv_engine.h  kv_engine_register.cc  load_db.h
src/storage/ssd/: CMakeLists.txt  conaiveKVell.h  naiveKVell.h  perf_spdk.cc  perf_spdkkvell_from_gpu.cu  rocksdb_wrapper.h  spdk_wrapper.cc  test_naiveKvell.cc  test_spdk_wrapper.cc  test_ssd_kv.cpp
src/storage/value_store/: dram_value_store.h  hybrid_value_store.h  ssd_value_store.h  value_store.h
src/test/: CMakeLists.txt  coroutine.cpp  test_allshards_ps_client.cpp  test_brpc_ps_server.cpp  test_cceh.cpp  test_concurrent_slab_memory_pool.cpp  test_config.cpp  test_engine_cceh.cpp  test_engine_extendible_hash.cpp  test_extendible_hash.cpp  test_external_kv_engine.cpp  test_factory.cpp  test_fasterkv_backend.cpp  test_hps_recstore_backend.cpp  test_hugectr_emb.cpp  test_index.cpp  test_io_backend.cpp  test_io_uring_helper.h  test_io_uring_test_utils.cpp  test_kvengine.cpp  test_local_shm_futex.cpp  test_local_shm_op_component.cpp  test_local_shm_protocol.cpp  test_local_shm_ps_client.cpp  test_local_shm_queue.cpp  test_local_shm_region.cpp  test_op.cpp  test_op_runtime_support.cpp  test_ps_client_factory.cpp  test_ps_transport_benchmark.cpp  test_r2_allocator.cpp  test_raw_rocksdb_backend.cpp  test_raw_verbs_allocator.cpp  test_rdma_protocol.cpp  test_report.cpp  test_shm_file.cpp  test_ssd_allocators.cpp  test_ssd_extendible_hash.cpp
src/test/configs/: recstore_config.brpc.json  recstore_config.op_rdma.json  recstore_config.rdma_multishard_test.json  recstore_config.rdma_test.json
src/test/scripts/: PS_TEST_CONFIGS.md  analyze_embupdate_stages.py  petps_cluster_runner.py  profile_rdma_transport_server.py  ps_server_helpers.py  ps_server_runner.py  ps_test_config.py  run_hierkv_recstore_mixed_benchmark.py  run_local_shm_mixed_benchmark.py  run_local_shm_multi_process_benchmark.py  run_petps_integration.py  run_petps_local_memcached.sh  run_petps_server.py  run_ps_dram_transport_benchmark.py  run_rdma_transport_benchmarks.py  test_petps_cluster_runner.py  test_ps_server_helpers.py  test_ps_server_runner.py  test_ps_test_config.py  test_recstore_config_schema.py  test_run_hierkv_recstore_mixed_benchmark.py  test_run_local_shm_mixed_benchmark.py  test_run_local_shm_multi_process_benchmark.py  (+4 more)
(+205 files in other folders)
